<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl_root"
    >

    <RadioGroup
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_black"
        android:orientation="horizontal"
        android:visibility="gone">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            />

        <RadioButton
            android:id="@+id/btn_beauty"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_beauty"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/beauty"
            android:textColor="@color/fg_btn_beauty"
            android:textSize="14sp"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="#969696"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            />

        <RadioButton
            android:id="@+id/btn_filter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_beauty"
            android:button="@null"
            android:gravity="center"
            android:text="@string/filter"
            android:textColor="@color/fg_btn_beauty"
            android:textSize="14sp"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            />

    </RadioGroup>

    <View
        android:id="@+id/btn_hide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/group_beauty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_black_corner"
        android:clickable="true"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:visibility="visible"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="美颜"
                android:textSize="15sp"
                android:textColor="@color/white"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_check"
                android:src="@mipmap/btn_check"
                android:layout_marginStart="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_white"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="bottom"/>
            <com.jaygoo.widget.RangeSeekBar
                android:paddingBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:rsb_mode="single"
                app:rsb_min="0"
                app:rsb_max="100"
                app:rsb_gravity="bottom"
                app:rsb_progress_height="4dp"
                app:rsb_progress_radius="4dp"
                app:rsb_progress_color="@color/colorPrimary"
                app:rsb_progress_default_color="@color/white"
                app:rsb_indicator_show_mode="showWhenTouch"
                app:rsb_indicator_background_color="@color/transparent"
                app:rsb_indicator_text_size="10sp"
                app:rsb_indicator_width="wrap_content"
                app:rsb_indicator_height="20dp"
                app:rsb_thumb_width="14dp"
                app:rsb_thumb_height="14dp"
                app:rsb_thumb_scale_ratio="1.2"
                app:rsb_tick_mark_mode="number"
                android:layout_marginTop="5dp"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="美白"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_mopi"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="bottom"/>
            <com.jaygoo.widget.RangeSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:id="@+id/seekBar2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:rsb_mode="single"
                app:rsb_min="0"
                app:rsb_max="100"
                app:rsb_gravity="bottom"
                app:rsb_progress_height="4dp"
                app:rsb_progress_radius="4dp"
                app:rsb_progress_color="@color/colorPrimary"
                app:rsb_progress_default_color="@color/white"
                app:rsb_indicator_show_mode="showWhenTouch"
                app:rsb_indicator_background_color="@color/transparent"
                app:rsb_indicator_text_size="10sp"
                app:rsb_indicator_width="wrap_content"
                app:rsb_indicator_height="20dp"
                app:rsb_thumb_width="14dp"
                app:rsb_thumb_height="14dp"
                app:rsb_thumb_scale_ratio="1.2"
                app:rsb_tick_mark_mode="number"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="磨皮"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_hongr"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="bottom"/>
            <com.jaygoo.widget.RangeSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:id="@+id/seekBar3"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:rsb_mode="single"
                app:rsb_min="0"
                app:rsb_max="100"
                app:rsb_gravity="bottom"
                app:rsb_progress_height="4dp"
                app:rsb_progress_radius="4dp"
                app:rsb_progress_color="@color/colorPrimary"
                app:rsb_progress_default_color="@color/white"
                app:rsb_indicator_show_mode="showWhenTouch"
                app:rsb_indicator_background_color="@color/transparent"
                app:rsb_indicator_text_size="10sp"
                app:rsb_indicator_width="wrap_content"
                app:rsb_indicator_height="20dp"
                app:rsb_thumb_width="14dp"
                app:rsb_thumb_height="14dp"
                app:rsb_thumb_scale_ratio="1.2"
                app:rsb_tick_mark_mode="number"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="红润"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"/>
        <com.yunbao.beauty.custom.TextSeekBar
            android:id="@+id/seek_meibai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:progressVal="0"
            app:text2="@string/beauty_meibai"
            android:visibility="gone"
            />

        <com.yunbao.beauty.custom.TextSeekBar
            android:id="@+id/seek_mopi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:progressVal="0"
            app:text2="@string/beauty_mopi"
            android:visibility="gone"
            />


        <com.yunbao.beauty.custom.TextSeekBar
            android:id="@+id/seek_hongrun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:progressVal="0"
            app:text2="@string/beauty_hongrun"
            android:visibility="gone"
            />

    </LinearLayout>


    <FrameLayout
        android:id="@+id/group_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom"
        android:background="@color/bg_black"
        android:clickable="true"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:visibility="invisible"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/filter_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </FrameLayout>

</RelativeLayout>